# ceny_nieruchomosci_AI

./: .gitignore  README.md  data_final.csv:PG$Secure  pyproject.toml  run_server.py  test_api.py
app/: __init__.py  config.py  main.py  models.py
notebooks/: 01_eda_and_training.ipynb
