[project]
name = "ceny-nieruchomosci-ai"
version = "1.0.0"
description = "System przewidujący ceny mieszkań w Polsce przy użyciu machine learning"
authors = [{name = "Student", email = "student@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-version = "3.10"
